--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,21 @@
 
 /* Your CSS Code here. */
+.holder{
+	display:flex
+}
+.three{
+	width:50px;
+	height:50px;
+	background-color:green;
+}
+.one{
+	width:50px;
+	height:50px;
+	background-color:red;
+}
+
+.two{
+	width:50px;
+	height:50px;
+	background-color:blue;
+}
